# VOLT

./: .gitignore  Approval Monitor.command  Freelance Bot.command  Omni Studio.command  approval_manager.js  approval_monitor.js  audio.js  catalog.js  catalog_pipeline.py  freelance_bot.js  install.js  link.js  package.json  pinokio.js  pinokio.json  reset.js  setup-macbook-air.sh  start.js  torch.js  update.js
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  publish-gpr.yml  publish-npm.yml  pylint.yml  python-app.yml  slsa.yml
app/dashboard/: Omni-Studio.command  app.py  bridge.py  build.sh  config.py  contacts.py  google_drive.py  kimi_client.py  launcher.py  llm_router.py  omi_kimi_bridge.py  omni.py  sample_scanner.py
app/dashboard/archive/: dashboard.html.bak
app/dashboard/data/: daw_watcher_state.json  notifications.json
app/dashboard/plugins/: __init__.py
app/dashboard/tests/: test_sampler_engine.py  test_scheduler.py
app/omni-source/: .env.example  .gitignore  README.md  master_loop.sh  migrate_music_library_schema.py  omni-brief.md  package-lock.json  run_pipeline.sh  status.sh  studio_core.sh  verify_and_run.sh  watchdog.sh
app/omni-source/Closed_Deals/: ARTIST_1784607294.txt  ATLANTAS_1784607294.txt  A_1784746100.txt  Amarah_1784607293.txt  An_1784733406.txt  BLAME_1784607294.txt  Caittys_1784718065.txt  Can_1784607293.txt  Catch_1784702726.txt  Caxiel_1784607294.txt  Chuckmate_1784647061.txt  Cousin_1784607294.txt  Denzel_1784607293.txt  Diana_1784607293.txt  Digital_1784607294.txt  DizzyDrill.txt  ELTUS_1784607293.txt  FAILED_A_1784663020.txt  FAILED_Breaking_1784662120.txt  FAILED_Can_1784655801.txt  FAILED_Giselle_1784661215.txt  FAILED_I_1784677460.txt  FAILED_Ian_1784661215.txt  FAILED_LEX_1784661215.txt  FAILED_Myshaan_1784660315.txt  FAILED_The_1784670240.txt  Falling_1784607293.txt  Foreign_1784607294.txt  Francis_1784733404.txt  Gloc9_1784607294.txt  Guyaneseborn_1784607294.txt  Hold_1784647964.txt  I_1784607293.txt  Independent_1784607294.txt  Inspiration_1784607293.txt  Isaac_1784718965.txt  It_1784749410.txt  Jaime_1784733404.txt  Jazz_1784607294.txt  Justice_1784607293.txt  (+50 more)
app/omni-source/Cold_Outreach_Drafts/: 1moretime_jayell.txt  bosslady_theplug.txt  j.kami23.txt  prodbeesb.txt  veyvocal.txt
app/omni-source/Contacted_Leads/: DizzyDrill_pitch.txt  YoungFuego_pitch.txt
app/omni-source/GODMODE/: .gitignore  CONTRIBUTING.md  LICENSE  README.md
app/omni-source/Outbound_Pitches/: 44phantom_1784607293_pitch.txt  AbbyLee_1784733404_pitch.txt  AmanSharma_1784732504_pitch.txt  AmanrajGill_1784607294_pitch.txt  Amarah_1784607293_pitch.txt  BLAMEMUSIC_1784607294_pitch.txt  BrookeAnnibale_1784749410_pitch.txt  Caitty_1784718065_pitch.txt  (+72 more)
app/omni-source/stemdeck/: .dockerignore  .gitignore  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ca_profile.xml  pyproject.toml  run.sh
app/omni-source/stemdeck/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/omni-source/stemdeck/.github/workflows/: ci.yml  docker-publish.yml  linux-release.yml  macos-release.yml  windows-release.yml
app/omni-source/stemdeck/app/: main.py
app/omni-source/stemdeck/app/api/: config.py  events.py  jobs.py  qr.py  router.py  stems.py
app/omni-source/stemdeck/app/core/: config.py  logging_setup.py  models.py  registry.py  settings.py
app/omni-source/stemdeck/app/pipeline/: __init__.py  analyze.py  collect.py  download.py  errors.py  runner.py  separate.py
app/omni-source/stemdeck/desktop/: package-lock.json  package.json
app/omni-source/stemdeck/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/omni-source/stemdeck/desktop/src-tauri/capabilities/: default.json
app/omni-source/stemdeck/desktop/src-tauri/icons/: icon.icns
app/omni-source/stemdeck/desktop/src-tauri/src/: main.rs
app/omni-source/stemdeck/desktop/ui/: index.html  runtime-manifest.json  setup.css  setup.js
app/omni-source/stemdeck/packaging/linux/: README-LINUX.txt  THIRD_PARTY_NOTICES.txt
app/omni-source/stemdeck/packaging/macos/: README-macOS.txt  THIRD_PARTY_NOTICES.txt
app/omni-source/stemdeck/scripts/linux/: make-portable.sh
app/omni-source/stemdeck/scripts/macos/: make-app.sh  make-dmg.sh  make-iconset.sh  make-runtime-pack.sh
app/omni-source/stemdeck/scripts/windows/: make-portable.ps1
app/omni-source/stemdeck/static/: index.html
app/omni-source/stemdeck/static/css/: appbar.css  catalog.css  daw.css  job.css  master.css  mixer.css  responsive.css  transport.css  variables.css  waves.css  widgets.css
app/omni-source/stemdeck/static/js/: audio.js  audioEngine.js  catalog.js  chunkedAudioEngine.js  constants.js  job.js  main.js  mixer.js  phrases.js  player.js  sections.js  state.js  transport.js  ui-chrome.js  utils.js
app/omni-source/stemdeck/static/js/shared/: jobs.js
app/omni-source/stemdeck/static/mobile/: app.js  index.html  styles.css
app/omni-source/stemdeck/templates/: stemdeck.xml
app/omni-source/stemdeck/tests/: conftest.py  test_csp.py  test_download_retry.py  test_errors.py  test_jobs_api.py  test_logging_setup.py  test_mobile_routing.py  test_network_gate.py  test_pipeline_collect.py  test_pipeline_runner.py  test_registry_persistence.py  test_separate_fallback.py  test_stems_api.py  test_sweep.py  test_url_validation.py  test_watchdog.py
app/volt-dashboard/: index.html  tailwind.config.js  vite.config.ts
models/: model_config.json
(+562 files in other folders)
