[package]
name = "stemdeck"
# Placeholder — stamped from the git tag at build time (Woodpecker / make-app.sh). #169
version = "0.0.0"
description = "StemDeck desktop launcher"
authors = ["StemDeck contributors"]
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
